# store

./: README.md  db.sqlite3  pyproject.toml
order/: factories.py  urls.py
order/models/: __init__.py
order/pasta_order/: asgi.py  settings.py  urls.py  wsgi.py
order/serializers/: __init__.py  order_serializer.py
order/tests/: test_serializers_order.py
order/tests/test_serializers/: test_serializers_order.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
product/: factories.py  urls.py
product/models/: __init__.py  product.py
product/pasta_product/: settings.py  urls.py
product/serializers/: __init__.py
product/tests/: test_category_serializer.py  test_product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewset/: test_product_viewset.py
product/viewsets/: __init__.py  product_viewset.py
store/: settings.py  urls.py
